# aws-alarm

./: Cargo.toml
src/: main.rs
