[package]
name = "aws-alarm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.aws-config]
git = "https://github.com/awslabs/aws-sdk-rust"
tag = "v0.0.22-alpha"
package = "aws-config"

[dependencies.aws-sdk-cloudwatch]
git = "https://github.com/awslabs/aws-sdk-rust"
tag = "v0.0.22-alpha"
package = "aws-sdk-cloudwatch"


[dependencies.tokio]
version = "1"
features = ["full"]
optional = true